--- a/agent/package.json
+++ b/agent/package.json
@@ -18,6 +18,7 @@
         "exec": "node --enable-source-maps --loader ts-node/esm src/index.ts"
     },
     "dependencies": {
+        "minato": "workspace:*",
         "@elizaos/adapter-supabase": "workspace:*",
         "@elizaos/adapter-postgres": "workspace:*",
         "@elizaos/adapter-redis": "workspace:*",
@@ -55,7 +56,7 @@
         "@elizaos/plugin-image-generation": "workspace:*",
         "@elizaos/plugin-movement": "workspace:*",
         "@elizaos/plugin-massa": "workspace:*",
-    "@elizaos/plugin-nft-generation": "workspace:*",
+        "@elizaos/plugin-nft-generation": "workspace:*",
         "@elizaos/plugin-node": "workspace:*",
         "@elizaos/plugin-solana": "workspace:*",
         "@elizaos/plugin-solana-agentkit": "workspace:*",
