--- a/packages/minato/package.json
+++ b/packages/minato/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "@elizaos/plugin-abstract",
-    "version": "0.1.7",
+    "name": "minato",
+    "version": "0.0.1",
     "type": "module",
     "main": "dist/index.js",
     "module": "dist/index.js",
